# agentvault

./: README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: token_vault.py
backend/app/routers/: agent.py  auth.py  permissions.py  vault.py
backend/app/services/: agent_engine.py  token_vault.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/: ActivityFeed.tsx  CommandBar.tsx  PermissionsPanel.tsx  Providers.tsx  ServiceCard.tsx  StepUpModal.tsx
frontend/src/lib/: api.ts
