[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentvault-backend"
version = "1.0.0"
description = "AgentVault backend — Auth0 Token Vault AI agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.2",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
